--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "keywords": ["templates", "dot.js", "webmake"],
     "repository" : {
         "type": "git",
-        "url": "https://git@github.com:slawekkolodziej/dot-module.git"
+        "url": "https://github.com/slawekkolodziej/dot-module.git"
     },
     "dependencies": {
         "commander": "0.5.2",
